platform/apps/nixcn-cms-prod/network/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nixcn-cms-prod-gateway
  namespace: nixcn-cms-prod
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - nix.org.cn

    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: nixcn-cms-prod-tls
      hosts:
        - nix.org.cn
